--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.10",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.16.1",
     "autoprefixer": "10.4.15",
-    "next": "13.4.19",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.4",
+    "next": "^14.0.3",
+    "next-sanity": "^5.4.6",
     "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "sanity": "^3.16.1",
+    "styled-components": "5.2",
+    "swr": "^2.2.5",
     "tailwindcss": "3.3.3"
   }
 }
